--- a/Fitness Blip Responsive/index.html
+++ b/Fitness Blip Responsive/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
     <section>
         <div class="leftcol">
@@ -25,9 +27,9 @@
             </a>
         </div>
         <div class="rightcol">
-            <img src="assets/fitness1.jpg" class="primary" alt="Fitness picture">
-            <img src="assets/fitness2.jpg" alt="Fitness picture">
-            <img src="assets/fitness3.jpg" alt="Fitness picture">
+            <img src="assets/fitness1.jpg" alt="Fitness picture">
+            <img src="assets/fitness2.jpg" class="secondary" alt="Fitness picture">
+            <img src="assets/fitness3.jpg" class="primary" alt="Fitness picture">
         </div>
     </section>
 </body>
