Start the Recall App layout project

--- a/Brutalist Layout/index.html
+++ b/Brutalist Layout/index.html
@@ -39,6 +39,7 @@
     </div>
 
     <img class="first" src="assets/4.png" alt="" class="box">
+    <img class="tall" src="assets/3.png" alt="">
 
     <div class="image-box">
       <img class="two" src="assets/1.png" alt="" class="box">
