complete tablet and deskotp css styles

--- a/Recall/index.html
+++ b/Recall/index.html
@@ -96,9 +96,12 @@
       <div class="testimonial-info">
           <img class="author-pick" src="assets/person.jpg" alt="customer quote">
           <div class="author">
-            <strong>Jane Doe</strong>
-            <a href="#">https://somecompeny</a>
 
+            <div>
+              <strong>Jane Doe</strong>
+              <a href="#">https://somecompeny</a>
+            </div>
+         
             <ul class="social-nav">
               <li>
                 <a href="#">
@@ -151,9 +154,8 @@
                 <li><a href="#">Privacy Policy</a></li>
             </ul> 
         </nav>
-
     </div>
-</footer>
+ </footer>
 
 </body>
 </html>
