Complete the mobie and desktop scss for the Analytics Panel

--- a/Panel/index.html
+++ b/Panel/index.html
@@ -64,9 +64,9 @@
         <div class="premium hide-mobile">
           <header>
             <h3>Go Premium</h3>
-            <a href="assets/right-btn.svg" class="right-btn"></a>
+            <img href="assets/right-btn.svg" class="right-btn">
           </header>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi dignissimos, optio earum et quis assumenda. Maxime eveniet voluptatum veritatis optio facere, repudiandae consequatur.</p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.re, repudiandae consequatur.</p>
         </div>
 
       </nav>
